[project]
name = "dbsenv"
version = "0.1.0"
description = "Gym-style environments for modeling Deep Brain Stimulation (DBS)."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=2.4.2",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbsenv"]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pre-commit",
]
